[gd_scene load_steps=66 format=3 uid="uid://432fmegl2y15"]

[ext_resource type="Script" uid="uid://bbeay6rpth71n" path="res://src/scripts/entities/player/player.gd" id="1_rds41"]
[ext_resource type="Texture2D" uid="uid://cjhmvr82aqb5h" path="res://_assets/sprites/player/dash.png" id="2_lvvd8"]
[ext_resource type="Texture2D" uid="uid://bbo6n3fxktp1v" path="res://_assets/sprites/player/death.png" id="3_qh5pu"]
[ext_resource type="Texture2D" uid="uid://c5bltr70jqdtu" path="res://_assets/sprites/player/double_jump.png" id="4_qh5pu"]
[ext_resource type="Texture2D" uid="uid://bmuudcxbvs1dn" path="res://_assets/sprites/player/hurt.png" id="6_ddkw8"]
[ext_resource type="Texture2D" uid="uid://k2kk1jy5m85w" path="res://_assets/sprites/player/idle.png" id="7_ddkw8"]
[ext_resource type="Texture2D" uid="uid://diqmeqx16y6kj" path="res://_assets/sprites/player/jump.png" id="7_qh5pu"]
[ext_resource type="Texture2D" uid="uid://os8ngbl0du2a" path="res://_assets/effects/luz_2.png" id="8_1hd0g"]
[ext_resource type="Texture2D" uid="uid://dyakuf6jk364e" path="res://_assets/sprites/player/run.png" id="8_qh5pu"]
[ext_resource type="Script" uid="uid://cpcnmrat71jim" path="res://src/scripts/entities/player/blue_torch.gd" id="9_ddkw8"]
[ext_resource type="Texture2D" uid="uid://drh4blynxm1fq" path="res://_assets/effects/luz_1.png" id="9_qh5pu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qh5pu"]
atlas = ExtResource("2_lvvd8")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddkw8"]
atlas = ExtResource("2_lvvd8")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd88a"]
atlas = ExtResource("2_lvvd8")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wihep"]
atlas = ExtResource("2_lvvd8")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8i6c"]
atlas = ExtResource("2_lvvd8")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7mgf"]
atlas = ExtResource("2_lvvd8")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7rlg"]
atlas = ExtResource("2_lvvd8")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o11cf"]
atlas = ExtResource("2_lvvd8")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_42pp5"]
atlas = ExtResource("3_qh5pu")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8hue"]
atlas = ExtResource("3_qh5pu")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wigwx"]
atlas = ExtResource("3_qh5pu")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucf4m"]
atlas = ExtResource("3_qh5pu")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3mds"]
atlas = ExtResource("3_qh5pu")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wweu"]
atlas = ExtResource("3_qh5pu")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmx58"]
atlas = ExtResource("3_qh5pu")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_48pw4"]
atlas = ExtResource("3_qh5pu")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uult2"]
atlas = ExtResource("3_qh5pu")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vmyf"]
atlas = ExtResource("4_qh5pu")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7lkm"]
atlas = ExtResource("4_qh5pu")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vwgm"]
atlas = ExtResource("4_qh5pu")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d28hy"]
atlas = ExtResource("4_qh5pu")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgfv5"]
atlas = ExtResource("4_qh5pu")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmfkv"]
atlas = ExtResource("4_qh5pu")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5fdq"]
atlas = ExtResource("7_qh5pu")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts20q"]
atlas = ExtResource("6_ddkw8")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmsi2"]
atlas = ExtResource("6_ddkw8")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlogv"]
atlas = ExtResource("6_ddkw8")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y105g"]
atlas = ExtResource("6_ddkw8")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeyik"]
atlas = ExtResource("7_ddkw8")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q7hw"]
atlas = ExtResource("7_ddkw8")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hkku"]
atlas = ExtResource("7_ddkw8")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea8wq"]
atlas = ExtResource("7_ddkw8")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyckb"]
atlas = ExtResource("7_ddkw8")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4ubb"]
atlas = ExtResource("7_ddkw8")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_60q7a"]
atlas = ExtResource("7_ddkw8")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ja7b"]
atlas = ExtResource("7_ddkw8")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgc27"]
atlas = ExtResource("7_ddkw8")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8ru6"]
atlas = ExtResource("7_ddkw8")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yddnd"]
atlas = ExtResource("7_qh5pu")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdbe3"]
atlas = ExtResource("7_qh5pu")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieo3n"]
atlas = ExtResource("7_qh5pu")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o70xw"]
atlas = ExtResource("7_qh5pu")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8p2t"]
atlas = ExtResource("7_qh5pu")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8yod"]
atlas = ExtResource("7_qh5pu")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0dwh"]
atlas = ExtResource("8_qh5pu")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_se6sl"]
atlas = ExtResource("8_qh5pu")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxuj2"]
atlas = ExtResource("8_qh5pu")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q6vc"]
atlas = ExtResource("8_qh5pu")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jmbg"]
atlas = ExtResource("8_qh5pu")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuxa7"]
atlas = ExtResource("8_qh5pu")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1xl5"]
atlas = ExtResource("8_qh5pu")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsiah"]
atlas = ExtResource("8_qh5pu")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_2q6vc"]
animations = [{
"frames": [{
"duration": 0.6,
"texture": SubResource("AtlasTexture_qh5pu")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_ddkw8")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_xd88a")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_wihep")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_m8i6c")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_v7mgf")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_o7rlg")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_o11cf")
}],
"loop": false,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42pp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8hue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wigwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucf4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3mds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wweu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmx58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48pw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uult2")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_5vmyf")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_k7lkm")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_3vwgm")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_d28hy")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_lgfv5")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_cmfkv")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_n5fdq")
}],
"loop": false,
"name": &"doble_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_ts20q")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_xmsi2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_dlogv")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_y105g")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeyik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q7hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hkku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea8wq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyckb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4ubb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60q7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ja7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgc27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8ru6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_yddnd")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_rdbe3")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ieo3n")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_o70xw")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_y8p2t")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_p8yod")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 0.6,
"texture": SubResource("AtlasTexture_b0dwh")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_se6sl")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_yxuj2")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_2q6vc")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_6jmbg")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_kuxa7")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_n1xl5")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_hsiah")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ddkw8"]
size = Vector2(11, 27)

[node name="Player" type="CharacterBody2D"]
collision_layer = 10
collision_mask = 7
script = ExtResource("1_rds41")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2q6vc")
animation = &"doble_jump"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 2.5)
shape = SubResource("RectangleShape2D_ddkw8")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = -16
limit_top = -16
limit_right = 1296
limit_bottom = 736

[node name="blue_torch" type="Node2D" parent="."]
script = ExtResource("9_ddkw8")

[node name="PointLight2D" type="PointLight2D" parent="blue_torch"]
scale = Vector2(1.7625, 1.775)
color = Color(1, 1, 1, 0.921569)
energy = 0.5
shadow_enabled = true
shadow_filter = 2
texture = ExtResource("8_1hd0g")

[node name="PointLight2D_2" type="PointLight2D" parent="blue_torch"]
position = Vector2(1, 3)
scale = Vector2(1.15, 1.0625)
texture = ExtResource("9_qh5pu")
texture_scale = 0.5

[node name="FlickerTimer" type="Timer" parent="blue_torch"]

[node name="dashCooldown" type="Timer" parent="."]
